<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.anno4j</groupId>
    <artifactId>anno4j-parent</artifactId>
    <version>2.4.1</version>
    <packaging>pom</packaging>
    <name>Anno4j Parent</name>
    <description>Read and write API for W3C Web Annotation Data Model (http://www.w3.org/TR/annotation-model/) and W3C
        Open Annotation Data Model (http://www.openannotation.org/spec/core/)
    </description>
    <url>https://github.com/anno4j/anno4j</url>
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/anno4j/anno4j/issues</url>
    </issueManagement>
    <scm>
        <developerConnection>scm:git:https://github.com/anno4j/anno4j.git</developerConnection>
        <url>https://github.com/anno4j/anno4j.git</url>
        <tag>v2.4</tag>
    </scm>

    <organization>
        <name>Chair of Distributed Information Systems - University of Passau</name>
        <url>http://www.fim.uni-passau.de/en/distributed-information-systems/</url>
    </organization>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Kai Schlegel</name>
            <email>kai.schlegel@googlemail.com</email>
        </developer>
        <developer>
            <name>Andreas Eisenkolb</name>
            <email>andreas.eisenkolb@gmail.com</email>
        </developer>
        <developer>
            <name>Emanuel Berndl</name>
            <email>berndl.emanuel@gmail.com</email>
        </developer>
        <developer>
            <name>Thomas Weißgerber</name>
            <email>weissger@posteo.de</email>
        </developer>
        <developer>
            <name>Matthias Fisch</name>
            <email>github@matthias-fisch.de</email>
        </developer>
    </developers>

    <modules>
        <module>anno4j-alibaba</module>
        <module>anno4j-ontologies</module>
        <module>anno4j-core</module>
        <module>anno4j-recommendation</module>
        <module>anno4j-extensions</module>
        <module>anno4j-compile-tool</module>
    </modules>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>apache</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>ossrh-release</id>
            <name>oss-sonatype releases</name>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>ossrh-snapshots</id>
            <name>oss-sonatype snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <java.version>1.7</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.root>${basedir}</project.root>
        <project.scm.id>github</project.scm.id>
    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <configuration>
                            <defaultKeyring>false</defaultKeyring>
                            <homedir>/home/travis/build/anno4j/anno4j/keyrings</homedir>
                            <secretKeyring>local.secring.gpg</secretKeyring>
                            <publicKeyring>local.pubring.gpg</publicKeyring>
                            <keyname>Anno4j</keyname>
                            <executable>gpg</executable>
                            <passphrase />
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.11</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.3</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.1.3</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.2.4</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Anno4j Dependencies -->
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>anno4j-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>anno4j-alibaba</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>anno4j-recommendation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>alibaba-composition-object</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>alibaba-repository-object</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>alibaba-store-blob</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.anno4j</groupId>
                <artifactId>anno4j-ontologies</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<forkCount>1</forkCount>-->
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.7</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>